[build-system]
requires = [
    'setuptools>=77.0.3',
    'numpy>=2.0.0',
]
build-backend = "setuptools.build_meta"

[project]
name = "pyratbay"
description = "Python Radiative Transfer in a Bayesian Framework"
readme = "README.md"
license = "GPL-2.0-only"
license-files = ["LICENSE" ]

#https://packaging.python.org/en/latest/guides/single-sourcing-package-version/
dynamic = ["version"]

requires-python = ">=3.9"
authors = [
  {name = "Patricio Cubillos", email = "patricio.cubillos@oeaw.ac.at"},
]

dependencies = [
    'numpy>=2.0.0',
    'scipy>=1.13.1',
    'matplotlib>=3.9.2',
    'mc3>=3.2.0',
    'chemcat>=0.3.12',
    'h5py>=3.10.0',
]

[project.optional-dependencies]
test = [
    'pytest>=3.9',
    'mpi4py>=3.1.4',
]

[project.urls]
"Homepage" = "https://github.com/pcubillos/pyratbay"

#https://setuptools.pypa.io/en/stable/userguide/entry_point.html#console-scripts
[project.scripts]
pbay = "pyratbay.__main__:main"

[tool.setuptools.dynamic]
version = {attr = "pyratbay.version.__version__"}

[tool.setuptools]
include-package-data = true

#https://setuptools.pypa.io/en/stable/userguide/package_discovery.html
[tool.setuptools.packages]
find = { namespaces = false }  # Take only folders with a __init__.py file

[tool.setuptools.package-data]
"pyratbay.data" = ["*"]
"pyratbay.data.CIA" = ["*"]
"pyratbay.data.filters" = ["*"]

#[tool.setuptools.packages]
#find = { namespaces = true }  # Take all sub-packages
#find = { namespaces = true, exclude = [
#       "tests", "tests.*",
#       "src", "src.*",
#       "docs", "docs.*",
#       "examples", "examples.*",
#    ] }



